后台设置逻辑

--- a/application/admin/view/system/setting.html
+++ b/application/admin/view/system/setting.html
@@ -2,8 +2,8 @@
 <style>
 	.logo-image a{
 		display:block;
-		width: 150px;
-		height: 150px;
+		width: 100px;
+		height: 100px;
 		float:left;
 		margin-right: 5px;
 	}
@@ -14,7 +14,7 @@
 	}
 	.del-up-image{
 		position:relative;
-		left:90%;
+		left:86%;
 		top:-100%;
 	}
 </style>
@@ -24,7 +24,7 @@
 		<div id="tab-system" class="HuiTab">
 			<div class="tabBar cl">
 				{foreach name="list" item="vo"}
-					<span><a href="{$vo.url}">{$vo.name}</a></span>
+					<span><a href="/admin/system/{$vo.url}">{$vo.name}</a></span>
 				{/foreach}
 			</div>
 			<div>
@@ -33,21 +33,21 @@
 						<span class="c-red">*</span>
 						网站名称：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-title" name="web_title" placeholder="控制在25个字、50个字节以内" value="" class="input-text">
+						<input type="text" id="website-title" name="web_name" placeholder="控制在25个字、50个字节以内" value="{$config.web_name ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
 					<label class="form-label col-xs-4 col-sm-2">备案号：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-icp" name="icp" value="" class="input-text">
+						<input type="text" id="website-icp" name="icp" value="{$config.icp ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
 					<label class="form-label col-xs-4 col-sm-2">
 						<span class="c-red">*</span>
 						网站Logo：</label>
-					<div class="formControls col-xs-8 col-sm-9 logo-image" id="goods-image">
-						<a onclick="upload_image();" id="add-goods-image">
+					<div class="formControls col-xs-8 col-sm-9 logo-image" id="logo-image-1">
+						<a onclick="upload_image(1);" id="add-goods-image-1">
 							<img src="/public/default_upload_images_add.jpg" alt="上传图片" />
 						</a>
 					</div>
@@ -57,7 +57,7 @@
 						<span class="c-red">*</span>
 						底部版权信息：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-copyright" name="copyright" placeholder="&copy;" value="" class="input-text">
+						<input type="text" id="website-copyright" name="copyright" placeholder="&copy;" value="{$config.copyright ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
@@ -65,15 +65,15 @@
 						<span class="c-red">*</span>
 						网站标题：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-title" name="title" value="" class="input-text">
+						<input type="text" id="website-title" name="web_title" value="{$config.web_title ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
 					<label class="form-label col-xs-4 col-sm-2">
 						<span class="c-red">*</span>
 						网站标题图标：</label>
-					<div class="formControls col-xs-8 col-sm-9 logo-image" id="goods-image">
-						<a onclick="upload_image();" id="add-goods-image">
+					<div class="formControls col-xs-8 col-sm-9 logo-image" id="logo-image-2">
+						<a onclick="upload_image(2);" id="add-goods-image-2">
 							<img src="/public/default_upload_images_add.jpg" alt="上传图片" />
 						</a>
 					</div>
@@ -83,7 +83,7 @@
 						<span class="c-red">*</span>
 						关键词：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-Keywords" name="key_words" placeholder="5个左右,8汉字以内,用英文,隔开" value="" class="input-text">
+						<input type="text" id="website-Keywords" name="key_words" placeholder="5个左右,8汉字以内,用英文,隔开" value="{$config.key_words ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
@@ -91,7 +91,7 @@
 						<span class="c-red">*</span>
 						网站描述：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-description" name="web_desc" placeholder="空制在80个汉字，160个字符以内" value="" class="input-text">
+						<input type="text" id="website-description" name="web_desc" placeholder="空制在80个汉字，160个字符以内" value="{$config.web_desc ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
@@ -99,7 +99,7 @@
 						<span class="c-red">*</span>
 						联系人：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-linkman" name="linkman" value="" class="input-text">
+						<input type="text" id="website-linkman" name="linkman" value="{$config.linkman ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
@@ -107,7 +107,7 @@
 						<span class="c-red">*</span>
 						联系电话：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-phone" name="phone" value="" class="input-text">
+						<input type="text" id="website-phone" name="phone" value="{$config.phone ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
@@ -115,7 +115,7 @@
 						<!-- <span class="c-red">*</span> -->
 						联系手机：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-mobile" name="mobile" value="" class="input-text">
+						<input type="text" id="website-mobile" name="mobile" value="{$config.mobile ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
@@ -142,7 +142,7 @@
 						<span class="c-red">*</span>
 						详细地址：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-address" name="address" value="" class="input-text">
+						<input type="text" id="website-address" name="address" value="{$config.address ?? ''}" class="input-text">
 					</div>
 				</div>
 				<div class="row cl">
@@ -150,7 +150,7 @@
 						<span class="c-red">*</span>
 						客服电话：</label>
 					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" id="website-service-tel" name="service_tel" value="" class="input-text">
+						<input type="text" id="website-service-tel" name="service_tel" value="{$config.service_tel ?? ''}" class="input-text">
 					</div>
 				</div>
 			</div>
@@ -165,6 +165,7 @@
 </div>
 <form id="hide-form" style="display:none;" target="ajaxR" enctype="multipart/form-data" method="POST" action="/admin/system/upload_images">
 	<input id="hide-form-file" type="file" name="image" value="" >
+	<input id="logo-flag" type="hidden">
 	<input type="text" name="module" value="setting" >
 </form>
 <iframe name="ajaxR" style="display:none;"></iframe>
@@ -176,48 +177,65 @@
 		});
 	}
 
-    function del_up_image(obj){
+	//删除图片
+    function del_up_image(obj,num){
         layer.confirm('确认要删除图片么？', {icon: 3, title:'提示'}, function(index){
             $(obj).parent('a').remove();
-            var size = $('#goods-image > a').size();
-            if(size < 5){
-                if($("#goods-image #add-goods-image").length == 0) {
+			var str1 = '#logo-image-'
+			var str2 = '#add-goods-image-'
+			var str_logo = str1 + num + ' > a';
+			var str3 = str1 + num + ' ' + str2 + num;
+            var size = $(str_logo).size();
+            if(size < 1){
+                if($(str3).length == 0) {
                     //元素不存在时执行的代码
                     var _html = ''+
-                        '<a onclick="upload_image();" id="add-goods-image">'+
+                        '<a onclick="upload_image(' + num + ');" id="' + str2 + '">'+
                             '<img src="/public/default_upload_images_add.jpg" alt="上传图片" />'+
                         '</a>';
-                    $('#goods-image').append(_html);
+                    $(str_logo).append(_html);
                 }
             }
             layer.close(index);
         });
     }
 	
-	function upload_image(){
-        var size = $('#goods-image > a').size();
-		
+	//上传图片
+	function upload_image(num){
+		var str = '#logo-image-' + num + ' > a';
+		var size = $(str).size();
         if(size > 1){
-            layer.msg('最多只能有一张商品图片');
+            layer.msg('最多只能有一张图片');
             return false;
         }
+		
+		$('#logo-flag').val(num);
         $('#hide-form-file').click();
 	}
 
 	function iframe_images_callback(status,src='',image=''){
 
         if(status == 1){
+			var flag = $('#logo-flag').val();
+			var name = 'logo';
+			if (flag == 2) {
+				name = 'title_logo';
+			}
+
             var _html = ''+
                 '<a>'+
                     '<img class="ex-image" src="'+src+'" />'+
-                    '<input type="hidden" name="images[]" value="'+image+'">'+
-                    '<i class="Hui-iconfont del-up-image" onclick="del_up_image(this)">&#xe6e2;</i>'+
+                    '<input type="hidden" name="' + name + '" value="'+image+'">'+
+                    '<i class="Hui-iconfont del-up-image" onclick="del_up_image(this,' + flag + ')">&#xe6e2;</i>'+
                 '</a>';
-            $('#add-goods-image').before(_html);
 
-            var size = $('#goods-image > a').size();
+			var str1 = '#add-goods-image-' + flag;
+			var str2 = '#logo-image-' + flag + ' > a';
+			$(str1).before(_html);
+         
+			size = $(str2).size();
             if(size > 1){
-                $('#add-goods-image').remove();
+                $(str1).remove();
             }
         }else{
             layer.msg('图片上传失败！');
