--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -26,7 +26,7 @@
                         <input class="input-text size-L" type="text" placeholder="验证码" name="yzm" id="yzm"
                             onblur="if(this.value==''){this.value='验证码:'}"
                             onclick="if(this.value=='验证码:'){this.value='';}" value="验证码:" style="width:150px;">
-                        <img src="{:captcha_src()}" onclick="this.src='{:captcha_src()}?x='+Math.random();" />
+                        <img id="captcha" src="{:captcha_src()}" onclick="this.src='{:captcha_src()}?x='+Math.random();" />
                         <!-- <a id="kanbuq" href="javascript:;">看不清，换一张</a> </div> -->
                 </div>
                 <div class="row cl">
@@ -94,12 +94,15 @@
                         })
                     } else {
                         layer.msg(data.msg, {time: 1000 }, function () {
-                            window.location.reload();
+                             $('#captcha').attr('src',"{:url('login/entry')}?x="+Math.random());
   
                         })
                     }
 
                 },
+                error: function () {
+                    layer.msg('服务器繁忙', { time: 1000 });
+                },                
 
             });            
         }
