--- a/application/admin/view/goods/add_category.html
+++ b/application/admin/view/goods/add_category.html
@@ -109,7 +109,9 @@
                     layer.open({
                         content:res.msg,
                         end:function(){
+                            parent.location.reload();
                             parent.layer.closeAll();
+                            
                         }
                     });
                 }else{
