--- a/application/admin/view/goods/category.html
+++ b/application/admin/view/goods/category.html
@@ -13,7 +13,8 @@
 			<input type="text" class="input-text" style="width:250px" placeholder="输入商品分类名称" value="{$keywords}" name="keywords">
 			<button type="submit" class="btn btn-success" id="" name="">
 				<i class="Hui-iconfont">&#xe665;</i>
-				搜索</button>
+				搜索
+			</button>
 		</div>
 		</form>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
@@ -96,8 +97,10 @@
 			layer.confirm('确认要删除吗？', function (index) {
 				$.post('/admin/goods/del_category',{category_id:id},function(res){
 					if(res.status == 1){
-						layer.msg('操作成功', { icon: 6, time: 1000 });
-						window.location.replace(location.href);
+						layer.msg('操作成功', { icon: 6, time: 1000 },function(){
+							window.location.replace(location.href);
+						});
+						
 					}else{
 						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
 					}
