后台设置(完成)

--- a/application/admin/view/member/add.html
+++ b/application/admin/view/member/add.html
@@ -111,7 +111,7 @@ $(function(){
 					}
 				},
 				error: function(){
-					layer.alert("服务器繁忙, 请联系管理员!");
+					layer.alert("服务器繁忙, 请稍等!");
 				}
 			});
 			
