--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -47,25 +47,25 @@
 				<div class="nav-wrap-zp">
 					<ul>
 						<li class="navItem">
-							<a href="#">
+							<a href="research.html">
 								<span><img src="__STATIC__/img/home/yanjiusuo@2x.png"></span>
 								<span>研究所</span>
 							</a>
 						</li>
 						<li class="navItem">
-							<a href="#">
+							<a href="genequery.html">
 								<span><img src="__STATIC__/img/home/jiyin@2x.png"></span>
 								<span>基因关系</span>
 							</a>
 						</li>
 						<li class="navItem">
-							<a href="/mobile/article/micro">
+							<a href="__STATIC__/unscramble.html">
 								<span><img src="__STATIC__/img/home/shu@2x.png" ></span>
 								<span>微解读</span>
 							</a>
 						</li>
 						<li class="navItem">
-							<a href="#">
+							<a href="__STATIC__/skin.html">
 								<span><img src="__STATIC__/img/home/pifu@2x.png" alt=""></span>
 								<span>皮肤管理</span>
 							</a>
@@ -75,13 +75,11 @@
 
 				<!-- 基因查询 -->
 				<div class="gene-query">
-					<a href="#">
+					<a href="relation.html">
 						<img src="__STATIC__/img/home/anniu@2x.png">
 					</a>
 				</div>
 
-
-				{if condition="isset($recom_goods) && $recom_goods"}
 				<!-- 推荐商品 -->
 				<div class="recommend-wrap">
 					<div class="title">
@@ -90,69 +88,97 @@
 					</div>
 					<div class="recommend-list">
 						<ul>
-							{volist name="recom_goods" id="vo"}
 							<li class="listItem">
 								<div class="img-wrap">
-									<img src="__GOODSIMG__{$vo.thumb}" />
+									<img src="__STATIC__/img/home/tupian1@2x.png" />
 								</div>
 								<div class="text">
-									<h3><a href="#">{$vo.name}</a></h3>
-									<p class="dec">{$vo.desc}</p>
+									<h3><a href="#">人类基因科普图书籍</a></h3>
+									<p class="dec">生命的语言 揭示人类基因的奥秘 基因科学 基因检测技术书 健康管理 智能诊疗 生活方式关系。</p>
 									<div class="buy">
-										<span class="price">¥{$vo.price}</span>
+										<span class="price">¥699</span>
 										<a href="#" class="butBtn">立即购买</a>
 									</div>
 								</div>
 							</li>
-							{/volist}
+							<li class="listItem">
+								<div class="img-wrap">
+									<img src="__STATIC__/img/home/tupian2@2x.png" />
+								</div>
+								<div class="text">
+									<h3><a href="#">新华书店正版图书籍</a></h3>
+									<p class="dec">生物反应器:转基因与代谢途径工程 曾庆平 生命科学/生物学生活，化学工业出版社 文轩网。</p>
+									<div class="buy">
+										<span class="price">¥698</span>
+										<a href="#" class="butBtn">立即购买</a>
+									</div>
+								</div>
+							</li>
 						</ul>
 					</div>
 				</div>
-				{/if}
 
 				<!-- 微解读 -->
-				{if condition="isset($article)"}
-					<div class="nscramble-wrap">
-						<div class="title">
-							<h3>微解读</h3>
-							<a href="#"><span class="more">查看全部{$article_count}项</span></a>
-						</div>
-						{if condition="isset($article.recom) && $article.recom"}
-						<div class="nscramble-list">
-						{volist name="article.recom" id="vo"}
-							<li class="nscrambleItem">
-								<a href="#">
-									<img src="__IMAGES__article/{$vo.thumb}" />
-									<span class="mask"></span>
-								</a>
-							</li>
-						{/volist}
-						</div>
-						{/if}
+				<div class="nscramble-wrap">
+					<div class="title">
+						<h3>微解读</h3>
+						<a href="#"><span class="more">查看全部50项</span></a>
 					</div>
-					
-					{if condition="isset($article.list) && $article.list"}
-						{volist name="$article.list" id="vo"}
-							<div class="question-wrap">
-								<h2>{$vo.name}</h2>
-								<ul class="question-list">
-									{volist name="vo.list" id="vl"}
-										<li>
-											<div class="text">
-												<h3><a href="#">{$vl.title}</a></h3>
-												<p>{$vl.desc}</p>
-											</div>
-											<div class="img-wrap">
-												<img src="__IMAGES__article/{$vl.thumb}" />
-											</div>
-										</li>
-									{/volist}
-								</ul>
-							</div>
-						{/volist}
-					{/if}
+					<div class="nscramble-list">
+						<li class="nscrambleItem">
+							<a href="#">
+								<img src="__STATIC__/img/home/tupian3@2x.png" />
+								<span class="mask"></span>
+							</a>
+						</li>
+						<li class="nscrambleItem">
+							<a href="#">
+								<img src="__STATIC__/img/home/tupian8@2x.png" />
+								<span class="mask"></span>
+							</a>
+						</li>
+						<li class="nscrambleItem">
+							<a href="#">
+								<img src="__STATIC__/img/home/tupian4@2x.png" />
+								<span class="mask"></span>
+							</a>
+						</li>
+					</div>
+				</div>
 
-				{/if}
+				<!-- 问题 -->
+				<div class="question-wrap">
+					<h2>搜索我DNA里的健康风险</h2>
+					<ul class="question-list">
+						<li>
+							<div class="text">
+								<h3><a href="#">基因检测有什么意义?</a></h3>
+								<p>我们可以从基因检测的遗传密码中探究最真实的自己，比如：“为什么我喝酒会脸红？我有什么天赋？我是节食减肥快，还是跑步减肥快？我体内潜藏了哪些易感致病基因？......</p>
+							</div>
+							<div class="img-wrap">
+								<img src="__STATIC__/img/home/tupian5@2x.png" />
+							</div>
+						</li>
+						<li>
+							<div class="text">
+								<h3><a href="#">什么是基因(gene)??</a></h3>
+								<p>基因是DNA分子上携带有遗传信息的功能片断，是控制生物性状的基本遗传单位。基因是生命的基本因子，是人类生老病死之因，是健康、亮丽、长寿之因，是生命的真......</p>
+							</div>
+							<div class="img-wrap">
+								<img src="__STATIC__/img/home/tupian6@2x.png" />
+							</div>
+						</li>
+						<li>
+							<div class="text">
+								<h3><a href="#">基因在哪里?</a></h3>
+								<p>在细胞的细胞核里含有核酸，它包括DNA(脱氧核糖核酸)和RNA(核糖核酸)，我们人类的基因就存在于DNA上，它就是DNA上的一个核苷酸片断。从遗传学角度讲，它就是DN......</p>
+							</div>
+							<div class="img-wrap">
+								<img src="__STATIC__/img/home/tupian7@2x.png" />
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<!-- 底部导航 -->
 			<div class="bottomNavWrap container" id="bottomNavWrap" data-id="0"></div>
