底部导航修复

--- a/application/mobile/view/goods/goods_list.html
+++ b/application/mobile/view/goods/goods_list.html
@@ -102,13 +102,13 @@
                     </div>
                     <div class="buy_box">
                         <span class="price left">￥699</span>
-                        <span class="buy_promptly right" onclick="pageJump('./product.html')">立即购买</span>
+                        <span class="buy_promptly right" onclick="pageJump('__STATIC__/product.html')">立即购买</span>
                     </div>
                 </div>
             </div>
             <div class="purchase_list">
                 <div class="item-img">
-                    <img src="__STATIC__../img/home/tupian1@2x.png" alt="">
+                    <img src="__STATIC__/img/home/tupian1@2x.png" alt="">
                 </div>
                 <div class="item-msg">
                     <p class="item_title">我们人类的基因</p>
