--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -59,7 +59,7 @@
 							</a>
 						</li>
 						<li class="navItem">
-							<a href="__STATIC__/unscramble.html">
+							<a href="/mobile/article/micro">
 								<span><img src="__STATIC__/img/home/shu@2x.png" ></span>
 								<span>微解读</span>
 							</a>
