后台设置样式

--- a/application/admin/view/layout/setting_head.html
+++ b/application/admin/view/layout/setting_head.html
@@ -1,8 +1,8 @@
 {include file="layout/head"/}
 <style>
     .tabBar{border-bottom: 2px solid rgb(221, 215, 179);}
+	.tabBar span{border-right: solid 0.1em rgb(243, 242, 242);}
     .tabBar span.current{background-color: rgb(221, 215, 179);}
-    .tabBar a{text-decoration:none;}
 </style>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页
 	<span class="c-gray en">&gt;</span>
