--- a/application/admin/view/system/basic.html
+++ b/application/admin/view/system/basic.html
@@ -5,7 +5,7 @@
 		<div id="tab-system" class="HuiTab">
 			<div class="tabBar cl">
 				{foreach name="list" item="vo"}
-					<span><a href="{$vo.url}">{$vo.name}</a></span>
+					<a href="/admin/system/{$vo.url}"><span>{$vo.name}</span></a>
 				{/foreach}
 			</div>
 			<div>
