--- a/application/mobile/view/article/example.html
+++ b/application/mobile/view/article/example.html
@@ -14,77 +14,42 @@
 		<div class="wrap_frame">
 			<!--public head-->
 			<div class="lb_headWrap">
-				<!--<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/"/>
-				</p>-->
 				<span>示例报告</span>
-				<!--<p class="lb_headWrap_text">领取产品</p>-->
 			</div>
 			<div class="report">
 				<!--主题图片-->
+				{if condition="isset($recom)"}
 				<div class="report_theme">
 					<!--图片项-s-->
-					<div class="report_theme_item">
-						<img src="http://img0.imgtn.bdimg.com/it/u=3093674761,1038215453&fm=26&gp=0.jpg"/>
+					{volist name="recom" id="vo"}
+					<div class="report_theme_item" onclick="window.location.href='/mobile/article/details?id={$vo.id}'">
+						<img src="__IMAGES__article/{$vo.thumb}"/>
 						<div class="mask">
-							<h1 class="mask_title">你有浓密的头发吗？</h1>
-							<p><span>6</span>项报告</p>
+							<h1 class="mask_title">{$vo.title}</h1>
 						</div>
 					</div>
-					<!--图片项-e-->
-					<div class="report_theme_item">
-						<img src="http://img4.imgtn.bdimg.com/it/u=304852001,674357681&fm=26&gp=0.jpg"/>
-						<div class="mask">
-							<h1 class="mask_title">你有浓密的头发吗？</h1>
-							<p><span>6</span>项报告</p>
-						</div>
-					</div>
+					{/volist}
 				</div>
+				{/if}
+				{if condition="isset($cate)"}
 				<!--报告列表-->
 				<div class="report_list">
-					<!--列表项-s-->
-					<div class="list_item clearfloat" onclick="window.location.href='example_heredity.html'">
+					{volist name="cate" id="vo"}
+					<div class="list_item clearfloat" onclick="window.location.href='/mobile/article/example_list?cate_id={$vo.id}'">
 						<div class="item_left">
-							<img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2552918465,2412090249&fm=26&gp=0.jpg"/>
+							<img src="__IMAGES__category/{$vo.thumb}"/>
 						</div>
 						<div class="item_right">
 							<div class="item_title">
-								<h3 class="title">遗传风险</h3>
-								<p class="detection"><span>3</span>项检测<img src="__STATIC__/img/example/youjian@2x.png"/></p>
+								<h3 class="title">{$vo.name}</h3>
+								<p class="detection"><span>{$vo.count}</span>项检测<img src="__STATIC__/img/example/youjian@2x.png"/></p>
 							</div>
-							<p>呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃鹅鹅鹅鹅鹅鹅饿啊实打实看到了</p>
+							<p>{$vo.desc}</p>
 						</div>
 					</div>
-					<!--列表项-e-->
-					<!--列表项-s-->
-					<div class="list_item clearfloat" onclick="window.location.href='example_heredity.html'">
-						<div class="item_left">
-							<img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2552918465,2412090249&fm=26&gp=0.jpg"/>
-						</div>
-						<div class="item_right">
-							<div class="item_title">
-								<h3 class="title">遗传风险</h3>
-								<p class="detection"><span>3</span>项检测<img src="__STATIC__/img/example/youjian@2x.png"/></p>
-							</div>
-							<p>呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃鹅鹅鹅鹅鹅鹅饿啊实打实看到了</p>
-						</div>
-					</div>
-					<!--列表项-e-->
-					<!--列表项-s-->
-					<div class="list_item clearfloat" onclick="window.location.href='example_heredity.html'">
-						<div class="item_left">
-							<img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2552918465,2412090249&fm=26&gp=0.jpg"/>
-						</div>
-						<div class="item_right">
-							<div class="item_title">
-								<h3 class="title">遗传风险</h3>
-								<p class="detection"><span>3</span>项检测<img src="__STATIC__/img/example/youjian@2x.png"/></p>
-							</div>
-							<p>呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃呃鹅鹅鹅鹅鹅鹅饿啊实打实看到了</p>
-						</div>
-					</div>
-					<!--列表项-e-->
+					{/volist}
 				</div>
+				{/if}
 			</div>
 			<!-- 底部导航 -->
 			<div class="bottomNavWrap container" id="bottomNavWrap" data-id="0"></div>
