手机端：皮肤管理

--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -65,7 +65,7 @@
 							</a>
 						</li>
 						<li class="navItem">
-							<a href="__STATIC__/skin.html">
+							<a href="/mobile/article/skin">
 								<span><img src="__STATIC__/img/home/pifu@2x.png" alt=""></span>
 								<span>皮肤管理</span>
 							</a>
