--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -44,13 +44,13 @@
             <div class="product">
                 <div class="product-list">
                     <div class="item-img">
-                        <img src="__STATIC__/img/purchase/jq.jpg" alt="">
+                        <img src="__IMAGES__goods/{$info.thumb}" alt="">
                     </div>
                     <div class="item-name">
-                        <span class="name">唾液检测仪 标准版 2.0</span>
+                        <span style="font-size:.3rem;">{$info.name}</span>
                     </div>
                     <div class="item-price">
-                        <p class="price">￥699</p>
+                        <p class="price">￥{$info.price}</p>
                         <p class="num">x1</p>
                     </div>
                 </div>
