--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -58,7 +58,7 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
                	
 				</li>
-				<li onclick="window.location.href='/mobile/user/my_site'">
+				<li onclick="window.location.href='/mobile/user/my_address'">
 
 					<img class="img1" src="__STATIC__/img/my/site@2x.png" />
 					<a>我的地址</a>
