手机端：研究所

--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -47,7 +47,7 @@
 				<div class="nav-wrap-zp">
 					<ul>
 						<li class="navItem">
-							<a href="research.html">
+							<a href="/mobile/index/research">
 								<span><img src="__STATIC__/img/home/yanjiusuo@2x.png"></span>
 								<span>研究所</span>
 							</a>
